<resources>
    <string name="app_name">Matuba</string>
    <string name="Latitude">Latitude:</string>
    <string name="Longitude">Longitude:</string>
    <string name="permission_dialog_title">LOCATIONS ARE GREAT</string>
    <string name="permission_message_dialog">To enable us to give you the best user experience ever please give access to location services.We promise to put it to good use</string>
    <string name="give_permission_button_dialog">GO Ahead</string>

    <string name="updating_gps">GPS Updating</string>
    <string name="enabled_gps">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="out_of_service">Oops. You seem to be out of service.</string>

    <!--Errors-->
    <string name="dialog_dismiss">Dismiss</string>
    <string name="information_title">Information</string>
    <string name="connection_lost">Oops !! Your looks like we lost the connection there . Check your internet connection and try again </string>
    <string name="no_connection">Oops !! Connection failed,Please connect to the internet and try again</string>
    <string name="unknown">That wasn\'t supposed to happen. Please restart the application and try again</string>
    <string name="turn_on_gps">Please turn on your location in the settings app to continue</string>
    <string name="error">Error</string>
    <string name="provider_disabled">Please turn on Location Services to continue</string>

    <!--speed limit strings-->
    <string name="slow_down">Drive carefully . Maybe slow down?</string>
    <string name="slow_down_more">Woah there!! Please slow down or ask the driver to slow down</string>
    <string name="going_to_hint">Enter destination</string>
    <string name="observe_speed_limits">Remember to observe speed limits</string>

    <!--BOTTOM NAVIGATION MENU-->
    <array name="main_menu">
        <item>Home</item>
        <item>Traffic updates</item>
        <item>Speed</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dismiss">Dismiss</string>
    <string name="home">Home</string>
    <string name="traffic">Traffic</string>
    <string name="speedometer">Speedometer</string>
    <string name="app_title">Matuba</string>
    <string name="spam_sms">Spam sms</string>
    <string name="speed_btn_text">How fast am I going</string>
    <string name="from">I am from</string>
    <string name="time_interval_hint">enter time interval for the messages</string>
    <string name="message_count_hint">10 messages</string>
    <string name="phone_number">Phone number</string>
    <string name="message">Your message ...</string>
    <string name="message_sent_count">%1s Messages sent </string>
    <string name="send_at_once">Send at once</string>
    <string name="send_in_intervals">Send in intervals</string>
</resources>
